# IFGF-RP

./: CMakeLists.txt  README.md
Solver/: BoxTree.h  Interpolator.h  LinearOperator.h  LinearOperator_old.cpp  edge_cv_old.h  global.h  global_interpolator.h  main.cpp  parameters.h  parametrization.h  parametrization_old.cpp  rp_cv.h  solver2.h  solver2_old.cpp
Solver/SolverImplementation/: GreenFunctions.cpp  IFGF_old.cpp  IteratorFunctions.cpp  IteratorFunctions_old.cpp  RP_old.cpp
Solver_old/: Chebyshev_old.h  Level_old.h  Makefile  Vector_old.h  main  mainpetsc.cpp  opGMRES_old.h  solver2_old.h
Solver_old/SolverImplementation/: ConstuctorsandSetup_old.cpp
code/: BoxTree.h  GreenFunctions.hpp  Interpolator.h  Level.h  Makefile  SphericalCoordinates.h  global.h  main2  main2.cpp  parameters.h  parametrization.h  rp_cv.h  solver2.h
code/SolverImplementation/: ConstructorsandSetup.cpp  ConstructorsandSetup.tpp  GreenFunctions.cpp  GreenFunctions.tpp  IFGF.cpp  IFGF.tpp  RP.cpp  RP.tpp  SolveandEval.cpp  SolveandEval.tpp
src/: BoxTree.h  Interpolator.h  Level.h  global.h  parametrization.cpp  parametrization.h  rp_cv.h  solver2.h
src/SolverImplementation/: ConstructorsandSetup.tpp  GreenFunctions.tpp  SolveandEval.tpp
tests/: ComplexEigenfunctionTest.cpp  Nacelle_Test.cpp  sphere_test.cpp  spherical_harmonics.hpp
